--- a/_config.yml
+++ b/_config.yml
@@ -112,9 +112,9 @@ analytics:
 author:
   name             : "Ellis L. Brown II"
   avatar           : "/assets/images/elb.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "Machine Learning Engineer"
-  location         : "Bay Area, CA"
-  email            : "ellis.l.brown.ii@gmail.com"
+  bio              : "MSCS @ CMU"
+  location         : "Pittsburgh, PA"
+  email            : "ellisbrown@cmu.edu"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
@@ -125,9 +125,9 @@ author:
     - label: "Linkedin"
       icon: "fab fa-fw fa-linkedin"
       url: "https://www.linkedin.com/in/ellislbrownii/"
-    - label: "Facebook"
-      icon: "fab fa-fw fa-facebook-square"
-      # url: "https://facebook.com/"
+    - label: "Scholar"
+      icon: "fa fa-graduation-cap"
+      url: "https://scholar.google.com/citations?user=Hp5uEnUAAAAJ"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/ellisbrown"
