update twitter for sharing

--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ naver_site_verification  :
 
 # Social Sharing
 twitter:
-  username               : ellisbrownii
+  username               : _ellisbrown
 facebook:
   username               :
   app_id                 :
@@ -219,7 +219,7 @@ kramdown:
 # Sass/SCSS
 sass:
   sass_dir: _sass
-  style: compressed # https://sass-lang.com/documentation/file.SASS_REFERENCE.html#output_style
+  # style: compressed # https://sass-lang.com/documentation/file.SASS_REFERENCE.html#output_style
 
 
 # Outputting
