--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,96 +2,101 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
-    - name: Date of Birth
-      value: 14th March 1879
-    - name: Languages
-      value: English, German
+      value: Ellis Brown
+    - name: Location
+      value: Pittsburgh, PA
 
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+    - title: M.S. in Computer Science
+      institution: Carnegie Mellon University, Pittsburgh, PA
+      year: 2023 
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
+        - Advised by Professors <a href="https://www.cs.cmu.edu/~dpathak">Deepak Pathak</a> and <a href="https://www.cs.berkeley.edu/~efros/">Alyosha Efros</a>.
+    - title: Non-Degree Graduate Student, Computer Science
+      institution: Stanford University, Stanford, CA
+      year: 2020
+    - title: Non-Degree Graduate Student, Computer Science
+      institution: Columbia University, New York, NY
+      year: 2019
+    - title: B.S. in Computer Science; B.A. in Mathematics
+      institution: Vanderbilt University, Nashville, TN
+      year: 2017
       description:
-        - Description 1.
-        - Description 2.
+        - Advised by Professor <a href="https://my.vanderbilt.edu/mkunda/">Maithilee Kunda</a>.
 
 - title: Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
+    - title: Research Engineer
+      institution: <a href="https://www.blackrock.com/corporate/ai">BlackRock AI Labs</a>, Palo Alto, CA
+      year: 2020 - 2021
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
+        - Advised by Professors <a href="https://mykel.kochenderfer.com/">Mykel Kochenderfer</a>, <a href="https://web.stanford.edu/~boyd/">Stephen Boyd</a>, and <a href="https://web.stanford.edu/~hastie/">Trevor Hastie</a>.
+        - Worked on applied research projects to transform BlackRock's business using Machine Learning, Statistics, and Optimization.
+    - title: ML Engineer
+      institution: <a href="https://www.blackrock.com/corporate/ai">BlackRock AI Labs</a>, New York, NY
+      year: 2018 - 2019
       description:
-        - Description 1.
-        - Description 2.
+        - Founding team member
+    - title: Software Engineer
+      institution: BlackRock, New York, NY
+      year: 2017
 
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
-      description:
-
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
+    - title: Software Engineering Intern
+      institution: BlackRock, New York, NY
+      year: 2016
 
 - title: Open Source Projects
   type: time_table
   contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
-
+    - title:  <a href="https://github.com/JuliaFirstOrder/al-folio">JuliaFirstOrder/</a>{<a href="https://github.com/JuliaFirstOrder/PiecewiseQuadratics.jl">PiecewiseQuadratics.jl</a>, <a href="https://github.com/JuliaFirstOrder/SeparableOptimization.jl">SeparableOptimization.jl</a>}
+      year: 2021
+      description:
+        - Co-authored Julia packages for solving the problem of minimizing a sum of piecewise-quadratic functions subject to affine equality constraints via a derivative of the Alternating Direction Method of Multipliers (ADMM).
+        - Formed the <a href="https://github.com/JuliaFirstOrder/JuliaFirstOrder">JuliaFirstOrder</a> organization.
+    - title: <a href="https://github.com/amdegroot/ssd.pytorch">amdegroot/ssd.pytorch</a>
+      year: 2017
+      description:
+        - Co-authored the canonical PyTorch implementation of the <a href="http://arxiv.org/abs/1512.02325v5">Single Shot MultiBox Detector</a>, a real-time object detection framework using a single network, 3 months after PyTorch's alpha release.
 - title: Honors and Awards
   type: time_table
   contents:
-    - year: 1921
+    - year: 2021 - Pres.
       items: 
-        - Nobel Prize in Physics 
-        - Matteucci Medal
-    - year: 2029
+        - Intel Growing the Legacy Graduate Scholarship
+    - year: 2021
       items: 
-        - Max Planck Medal
-
-- title: Academic Interests
-  type: nested_list
-  contents:
-    - title: Topic 1.
-      items: 
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
+        - Scholar, Computer Science Research Mentorship Program, Google Research
+        - Scholar, Lighting the Pathways to Faculty Careers for Natives in STEM, American Indian Science & Engineering Society (AISES)
+    - year: 2019
       items:
-        - Description 1.
-        - Description 2.
+        - 2nd Place, Graduate Student Research Competition, AISES National Conference 
+- title: Scholarship
+  type: time_table
+  contents:
+    - year: 2021 - Pres.
+      items: 
+        - Intel Growing the Legacy Graduate Scholarship
+        - Osage Nation Higher Education Graduate Scholarship
+    - year: 2013 - 2017
+      items:
+        - Osage Nation Higher Education Undergraduate Scholarship
+
+# - title: Academic Interests
+#   type: nested_list
+#   contents:
+#     - title: Topic 1.
+#       items: 
+#         - Description 1.
+#         - Description 2.
+#     - title: Topic 2.
+#       items:
+#         - Description 1.
+#         - Description 2.
 
 - title: Other Interests
   type: list
   contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+    - <u>Hobbies:</u> Water Polo, Skiing, Kitesurfing (learning); Formula 1; eating/cooking delicious food.
