--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,7 +2,7 @@
   type: map
   contents:
     - name: Full Name
-      value: Ellis Brown
+      value: Ellis L. Brown, II
     - name: Location
       value: Pittsburgh, PA
 
