--- a/_config.yml
+++ b/_config.yml
@@ -192,6 +192,7 @@ plugins:
   - jekyll-sitemap
   - jekyll-link-attributes
   - jekyll-twitter-plugin
+  - jekyll-redirect-from
   - jemoji
 
 # Sitemap settings
