add diffusion classifier

--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -18,3 +18,11 @@
 "Li*":
   - firstname: ["Alex", "Alexander", "Alexander C.", "A."]
     url: "https://alexanderli.com"
+
+"Prabhudesai":
+  - firstname: ["Mihir", "M."]
+    url: "https://mihirp1998.github.io/"
+
+"Duggal":
+  - firstname: ["Shivam", "S."]
+    url: "https://shivamduggal4.github.io/"
