no author limit

--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -1,6 +1,6 @@
 
 "Kunda":
-  - fistname: ["Maithilee"]
+  - fistname: ["Maithilee", "M."]
     url: ["https://my.vanderbilt.edu/mkunda/"]
 
 "Pathak":
