--- a/_config.yml
+++ b/_config.yml
@@ -348,7 +348,7 @@ external_links:
 imagemagick:
   enabled: true # enables responsive images for your site (recommended, see https://github.com/alshedivat/al-folio/issues/537)
   widths:
-    - 480
+    # - 480
     - 800
     - 1400
   input_directories:
@@ -361,6 +361,7 @@ imagemagick:
     - ".gif"
   output_formats:
     webp: "-quality 85"
+    # webp: "-quality 100"
 
 # -----------------------------------------------------------------------------
 # Optional Features
