--- a/_config.yml
+++ b/_config.yml
@@ -179,7 +179,7 @@ collections:
 
 announcements:
   enabled: true
-  scrollable: false # adds a vertical scroll bar if there are more than 3 news items
+  scrollable: true # adds a vertical scroll bar if there are more than 3 news items
   limit: 7 # leave blank to include all the news in the `_news` folder
 
 latest_posts:
