--- a/_config.yml
+++ b/_config.yml
@@ -330,6 +330,7 @@ filtered_bibtex_keywords:
     google_scholar_id,
     html,
     inspirehep_id,
+    include,
     pdf,
     poster,
     preview,
